--- a/.spacemacs.d/.spacemacs.env
+++ b/.spacemacs.d/.spacemacs.env
@@ -26,62 +26,45 @@
 
 # Environment variables:
 # ----------------------
-CLASSPATH=.:/usr/lib/jvm/jdk1.8.0_271/lib:/usr/lib/jvm/jdk1.8.0_271/jre/lib
-CLUTTER_IM_MODULE=fcitx
-DESKTOP_SESSION=ubuntu
-DISPLAY=:0
-GDMSESSION=ubuntu
-GIO_LAUNCHED_DESKTOP_FILE=/home/d/.local/share/applications/spacemacs.desktop
-GIO_LAUNCHED_DESKTOP_FILE_PID=132722
-GJS_DEBUG_OUTPUT=stderr
-GJS_DEBUG_TOPICS=JS ERROR;JS LOG
-GNOME_DESKTOP_SESSION_ID=this-is-deprecated
-GNOME_SHELL_SESSION_MODE=ubuntu
+DESKTOP_SESSION=plasma
+DESKTOP_STARTUP_ID=D;1623308404;696195;941_TIME4438647
+GTK2_RC_FILES=/etc/gtk-2.0/gtkrc:/home/d/.gtkrc-2.0:/home/d/.config/gtkrc-2.0
 GTK_IM_MODULE=fcitx
-GTK_MODULES=gail:atk-bridge
+GTK_MODULES=canberra-gtk-module
+GTK_RC_FILES=/etc/gtk/gtkrc:/home/d/.gtkrc:/home/d/.config/gtkrc
 HOME=/home/d
-IM_CONFIG_PHASE=1
-INVOCATION_ID=77b586724e1342349fe90e771f31f8dc
-JAVA_HOME=/usr/lib/jvm/jdk1.8.0_271
-JOURNAL_STREAM=8:50824
-JRE_HOME=/usr/lib/jvm/jdk1.8.0_271/jre
-LANG=en_US.UTF-8
-LC_ADDRESS=zh_CN.UTF-8
-LC_CTYPE=zh_CN.utf8
-LC_IDENTIFICATION=zh_CN.UTF-8
-LC_MEASUREMENT=zh_CN.UTF-8
-LC_MONETARY=zh_CN.UTF-8
-LC_NAME=zh_CN.UTF-8
-LC_NUMERIC=zh_CN.UTF-8
-LC_PAPER=zh_CN.UTF-8
-LC_TELEPHONE=zh_CN.UTF-8
-LC_TIME=zh_CN.UTF-8
-LESSCLOSE=/usr/bin/lesspipe %s %s
-LESSOPEN=| /usr/bin/lesspipe %s
+KDE_APPLICATIONS_AS_SCOPE=1
+KDE_FULL_SESSION=true
+KDE_SESSION_UID=1000
+KDE_SESSION_VERSION=5
+LANG=zh_CN.UTF-8
+LANGUAGE=zh_CN:en_US
 LOGNAME=d
-LS_COLORS=
-MANAGERPID=2288
-PATH=/usr/lib/jvm/jdk1.8.0_271/bin:/home/d/.cask/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
-PATH=/usr/lib/jvm/jdk1.8.0_271/bin:/usr/lib/jvm/jdk1.8.0_271/bin:/home/d/.cask/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
+MAIL=/var/spool/mail/d
+MOTD_SHOWN=pam
+PAM_KWALLET5_LOGIN=/run/user/1000/kwallet5.socket
+PATH=/usr/local/sbin:/usr/local/bin:/usr/bin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl
+PATH=/usr/local/sbin:/usr/local/bin:/usr/bin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:/usr/lib/jvm/default/bin
 PWD=/home/d
-QT4_IM_MODULE=fcitx
-QT_ACCESSIBILITY=1
+QT_AUTO_SCREEN_SCALE_FACTOR=0
 QT_IM_MODULE=fcitx
-SESSION_MANAGER=local/d-c:@/tmp/.ICE-unix/2523,unix/d-c:/tmp/.ICE-unix/2523
+SDL_IM_MODULE=fcitx
+SESSION_MANAGER=local/D:@/tmp/.ICE-unix/898,unix/D:/tmp/.ICE-unix/898
 SHELL=/bin/bash
 SHLVL=1
-SPACEMACSDIR=/home/d/.emacs.d/.spacemacs.d
 USER=d
-USERNAME=d
-WINDOWPATH=2
-XAUTHORITY=/run/user/1000/gdm/Xauthority
-XDG_CONFIG_DIRS=/etc/xdg/xdg-ubuntu:/etc/xdg
-XDG_CURRENT_DESKTOP=ubuntu:GNOME
-XDG_DATA_DIRS=/usr/share/ubuntu:/usr/local/share/:/usr/share/:/var/lib/snapd/desktop
-XDG_MENU_PREFIX=gnome-
+XAUTHORITY=/home/d/.Xauthority
+XCURSOR_SIZE=24
+XCURSOR_THEME=Layan-white-cursors
+XDG_CURRENT_DESKTOP=KDE
 XDG_RUNTIME_DIR=/run/user/1000
+XDG_SEAT=seat0
+XDG_SEAT_PATH=/org/freedesktop/DisplayManager/Seat0
 XDG_SESSION_CLASS=user
-XDG_SESSION_DESKTOP=ubuntu
+XDG_SESSION_DESKTOP=KDE
+XDG_SESSION_ID=2
+XDG_SESSION_PATH=/org/freedesktop/DisplayManager/Session1
 XDG_SESSION_TYPE=x11
+XDG_VTNR=1
 XMODIFIERS=@im=fcitx
 _=/usr/bin/env
