--- a/.spacemacs.d/.spacemacs.env
+++ b/.spacemacs.d/.spacemacs.env
@@ -27,7 +27,7 @@
 # Environment variables:
 # ----------------------
 DESKTOP_SESSION=plasma
-DESKTOP_STARTUP_ID=D;1623308404;696195;941_TIME4438647
+DESKTOP_STARTUP_ID=D;1626454329;630227;954_TIME7777083
 GTK2_RC_FILES=/etc/gtk-2.0/gtkrc:/home/d/.gtkrc-2.0:/home/d/.config/gtkrc-2.0
 GTK_IM_MODULE=fcitx
 GTK_MODULES=canberra-gtk-module
@@ -49,13 +49,15 @@ PWD=/home/d
 QT_AUTO_SCREEN_SCALE_FACTOR=0
 QT_IM_MODULE=fcitx
 SDL_IM_MODULE=fcitx
-SESSION_MANAGER=local/D:@/tmp/.ICE-unix/898,unix/D:/tmp/.ICE-unix/898
+SESSION_MANAGER=local/D:@/tmp/.ICE-unix/929,unix/D:/tmp/.ICE-unix/929
 SHELL=/bin/bash
 SHLVL=1
+SYSTEMD_EXEC_PID=827
 USER=d
 XAUTHORITY=/home/d/.Xauthority
 XCURSOR_SIZE=24
 XCURSOR_THEME=Layan-white-cursors
+XDG_CONFIG_DIRS=/home/d/.config/kdedefaults:/etc/xdg
 XDG_CURRENT_DESKTOP=KDE
 XDG_RUNTIME_DIR=/run/user/1000
 XDG_SEAT=seat0
